# Ai_Sub_Scalp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  sources.json  tailwind.config.ts  tsconfig.json
.github/workflows/: discover.yml  scrape.yml
aisubscalp/: cli.py  config.py  discovery.py  exporter.py  filters.py  models.py  scan.py  scheduler.py  storage.py  utils.py  verify.py
app/: globals.css  layout.tsx  page.tsx
app/api/deals/: route.ts
app/api/status/: route.ts
config/: keywords.json  sources.json
examples/: deals.sample.csv  deals.sample.json
lib/: seedDeals.ts  supabase.ts
scripts/: discover_tools.py  scraper.py
tests/: test_filters.py
